--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-	<title> Test Website </title>
+	<title> Cory's Website </title>
 </head>
 <body>
 	<h1><a href = "mailto:campbellcory2360@gmail.com">campbellcory2360@gmail</a>
