--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <html>
 <head>
 	<title> Cory's Website </title>
+	<link rel = "stylesheet" type="text/css"
+	href="css/style.css">
 </head>
 <body>
+	<img src="images/test.png" alt="boruto" height="250" width="250">
 	<h1><a href = "mailto:campbellcory2360@gmail.com">campbellcory2360@gmail</a>
 	<hr/>
 	<h2> LIST OF ALL MY PROGRAMS </h2>
