--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 				My intentions are to develop my programming capabilities, as well as improving in other areas I am interested in, such as web designing  and app development.
 				During my four year pursuit of my bachelors degree, I aim to hone in on these skills in order to make myself a worthy asset to the tech industry.
 	  </p>
-		<img src="images/Profile-pic.jpg" alt="boruto" height="250" width="250">
+		<img src="images/Profile-pic.jpg" alt="Cory Campbell" height="250" width="250">
 	</div>
 </div>
 <div id="Exp" class="Experience">
