--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title> Cory's Portfolio </title>
-	<meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no"/>
+	<meta name="viewport" content="width=device-width, initial-scale=1"/>
 	<link rel = "stylesheet" type="text/css"
 		href="css/style.css">
 </head>
@@ -14,11 +14,11 @@
 			<li><a href ="#Proj">Projects</li>
 			<li><a href ="#Con">Contact</a></li>
 		</ul>
-<div id="top" class = "banner">
-	<img class="banner-image" src ="images/j2.jpg">
-</div>
+	<div id="top" class = "banner">
+
+	</div>
 <div id="Introduction" class ="intro">
-		<h1>Hi there,</h1>
+	<script src ="js/add-content.js" ></script>
 		<p>my name is Cory Campbell, I am an aspiring Software Engineer located in New York Brooklyn.
 				My intentions are to develop my programming capabilities, as well as improving in other areas I am interested in, such as web designing  and app development.
 				During my four year pursuit of my bachelors degree, I aim to hone in on these skills in order to make myself a worthy asset to the tech industry.
